--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,9 @@
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers-contrib/features/neovim-apt-get:1": {},
-		"ghcr.io/itsmechlark/features/doppler:2": {}
+		"ghcr.io/itsmechlark/features/doppler:2": {},
+		"ghcr.io/withfig/features/fig:1": {}
+
 	},
 
 	// Configure tool-specific properties.
